--- a/WebApplication1/WebApplication1/tempApp.csproj
+++ b/WebApplication1/WebApplication1/tempApp.csproj
@@ -75,16 +75,15 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\Scripts\angular.min.js" />
+    <Content Include="Areas\Styles\bootstrap.min.css" />
     <Content Include="Areas\Templates\HelloWorld.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Areas\Scripts\" />
-    <Folder Include="Areas\Styles\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
