--- a/WebApplication1/WebApplication1/MultiLingualApp.csproj
+++ b/WebApplication1/WebApplication1/MultiLingualApp.csproj
@@ -66,7 +66,52 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\Scripts\app\HomeController.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-animate.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-animate.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-aria.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-aria.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-cookies.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-cookies.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-csp.css" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-loader.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-loader.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-message-format.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-message-format.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-messages.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-messages.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-mocks.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-parse-ext.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-parse-ext.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-resource.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-resource.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-route.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-route.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-sanitize.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-sanitize.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-scenario.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-touch.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-touch.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular\version.txt" />
     <Content Include="packages.config" />
+    <Content Include="Areas\dictionary\translation_en.json" />
+    <Content Include="Areas\dictionary\translation_hi.json" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-animate.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-aria.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-cookies.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-loader.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-message-format.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-messages.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-parse-ext.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-resource.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-route.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-sanitize.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular-touch.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\angular.min.js.map" />
+    <Content Include="Areas\Scripts\Vendor\angular\errors.json" />
+    <Content Include="Areas\Scripts\Vendor\angular\version.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -75,7 +120,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Areas\Scripts\angular.min.js" />
+    <Content Include="Areas\Scripts\Vendor\angular.min.js" />
     <Content Include="Areas\Styles\bootstrap.min.css" />
     <Content Include="Areas\Templates\HelloWorld.html" />
     <Content Include="Web.config" />
